--- a/index.html
+++ b/index.html
@@ -3,8 +3,52 @@
     <head>
         <meta charset="utf-8">
         <title>arne.schlueter.is</title>
-        <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" type="text/css">
         <style type="text/css">
+            @font-face {
+                font-family: 'Fantasque Sans Mono';
+                src: url('fonts/FantasqueSansMono-Italic.eot'); /* IE 9 Compatibility Mode */
+                src: url('fonts/FantasqueSansMono-Italic.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+                url('fonts/FantasqueSansMono-Italic.woff2') format('woff2'),
+                url('fonts/FantasqueSansMono-Italic.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+                url('fonts/FantasqueSansMono-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+                url('fonts/FantasqueSansMono-Italic.svg#FantasqueSansMono-Italic') format('svg'); /* Chrome < 4, Legacy iOS */
+                font-weight: 400;
+                font-style: italic;
+            }
+            @font-face {
+                font-family: 'Fantasque Sans Mono';
+                src: url('fonts/FantasqueSansMono-Regular.eot'); /* IE 9 Compatibility Mode */
+                src: url('fonts/FantasqueSansMono-Regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+                url('fonts/FantasqueSansMono-Regular.woff2') format('woff2'),
+                url('fonts/FantasqueSansMono-Regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+                url('fonts/FantasqueSansMono-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+                url('fonts/FantasqueSansMono-Regular.svg#FantasqueSansMono-Regular') format('svg'); /* Chrome < 4, Legacy iOS */
+                font-weight: 400;
+                font-style: normal;
+            }
+            @font-face {
+                font-family: 'Fantasque Sans Mono';
+                src: url('fonts/FantasqueSansMono-BoldItalic.eot'); /* IE 9 Compatibility Mode */
+                src: url('fonts/FantasqueSansMono-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+                url('fonts/FantasqueSansMono-BoldItalic.woff2') format('woff2'),
+                url('fonts/FantasqueSansMono-BoldItalic.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+                url('fonts/FantasqueSansMono-BoldItalic.ttf') format('truetype'), /* Safari, Android, iOS */
+                url('fonts/FantasqueSansMono-BoldItalic.svg#FantasqueSansMono-BoldItalic') format('svg'); /* Chrome < 4, Legacy iOS */
+                font-weight: 700;
+                font-style: italic;
+            }
+            @font-face {
+                font-family: 'Fantasque Sans Mono';
+                src: url('fonts/FantasqueSansMono-Bold.eot'); /* IE 9 Compatibility Mode */
+                src: url('fonts/FantasqueSansMono-Bold.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+                url('fonts/FantasqueSansMono-Bold.woff2') format('woff2'),
+                url('fonts/FantasqueSansMono-Bold.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+                url('fonts/FantasqueSansMono-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+                url('fonts/FantasqueSansMono-Bold.svg#FantasqueSansMono-Bold') format('svg'); /* Chrome < 4, Legacy iOS */
+                font-weight: 700;
+                font-style: normal;
+            }
+
             *,
             *:before,
             *:after {
@@ -20,8 +64,8 @@
             }
 
             body {
-                font-family: 'Droid Sans Mono', monospace;
-                font-size: 16px;
+                font-family: 'Fantasque Sans Mono', monospace;
+                font-size: 18px;
                 color: #2e2e2e;
                 line-height: 2;
                 background: #eee;
