--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <body>
         <div class="wrapper">
             <ul class="contact-info">
-                <li><label>Mail</label> <a href="mailto:arne@schlueter.is">arne@schlueter.is</a></li>
+                <li><label>Mail</label> arne at schlueter dot is</li>
                 <li><label>PGP Public Key</label> <a href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x8BC45AA56264E016" target="_blank" title="Fingerprint: 6B6E 6A69 8BD2 D095 57D1 9EE1 8BC4 5AA5 6264 E016">6264E016</a></li>
 		<li><label>See also</label> <a href="https://arne.schlueter.is/working-on/berliner-winter/" target="_blank">Berliner Winter</a>
             </ul>
